Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7076

'rc' might be used uninitialized in ptlrpc_server_hpreq_init function.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      static int ptlrpc_server_hpreq_init(struct ptlrpc_service_part *svcpt,
      				    struct ptlrpc_request *req)
      {
      	int rc;
      	ENTRY;
      
      	if (svcpt->scp_service->srv_ops.so_hpreq_handler != NULL) {...}
      
      	if (req->rq_export != NULL && req->rq_ops != NULL) {...}
      
      	RETURN(rc);
      }
      

            wc-triage WC Triage
            dmiter Dmitry Eremin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: