LU-7076 ptlrpc: Unitialized rc in ptlrpc_server_hpreq_init

'rc' was not initialized and could potentially not be set.
The return code is used to determine the priority of the rpc
call. Assume normal priority (rc = 0) to begin with.

Signed-off-by: Giuseppe Di Natale <dinatale2@llnl.gov>
Change-Id: Iff4a4b8bf78151cbd1e3b7218da7551b2039838a
Reviewed-on: http://review.whamcloud.com/16327
Reviewed-by: Dmitry Eremin <dmitry.eremin@intel.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>